WIP: change matchModelToEntity* methods to prior implementation, minor MatchRepositoryTest refactoring
issue #27